--- a/package.json
+++ b/package.json
@@ -1,13 +1,23 @@
 {
-  "name": "candidate-test",
+  "name": "candidate-tester-solution",
   "version": "0.1.0",
+  "description": "This is the solution project for the Norigin Media testing task for new candidates",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.8.2",
+    "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.5.1",
+    "@mui/material": "^5.5.3",
+    "@mui/styles": "^5.5.3",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.26.1",
+    "moment": "^2.29.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-moment": "^1.1.1",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
   },
@@ -17,6 +27,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "author": "jose.leon@wotdev.com",
+  "license": "MIT",
   "eslintConfig": {
     "extends": [
       "react-app",
